# keychains

./: .gitignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  api.ts  i18n.test.ts  i18n.ts  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  error.rs  lib.rs  main.rs  models.rs  vault.rs
src/components/: EntryEditor.vue  IconGlyph.vue  SettingsDialog.test.ts  SettingsDialog.vue  SetupScreen.vue  TypeEditor.vue  UnlockScreen.vue
src/stores/: vault.test.ts  vault.ts
src/utils/: security.test.ts  security.ts
